Done: Add, Update, Cancel - Booking