@@ -2,7 +2,6 @@ package vn.eledevo.vksbe.constant;
 
 import static vn.eledevo.vksbe.constant.Permission.*;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -12,9 +11,10 @@ import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
 
+@Getter
 @RequiredArgsConstructor
 public enum Role {
-    USER(Collections.emptySet()),
+    USER(Set.of(USER_READ, USER_CREATE, USER_UPDATE, USER_CANCEL)),
     ADMIN(Set.of(
             ADMIN_READ,
             ADMIN_UPDATE,
@@ -25,8 +25,6 @@ public enum Role {
             MANAGER_DELETE,
             MANAGER_CREATE)),
     MANAGER(Set.of(MANAGER_READ, MANAGER_UPDATE, MANAGER_DELETE, MANAGER_CREATE));
-
-    @Getter
     private final Set<Permission> permissions;
 
     public List<SimpleGrantedAuthority> getAuthorities() {
